--- a/index.html
+++ b/index.html
@@ -163,15 +163,25 @@
 
     <script>
         let currentInput = '';
-        const API_URL = 'http://localhost:8080/calculate';
+        //const API_URL = 'http://localhost:8080/calculate';
+    
 
-        async function checkServer() {
-            try {
-                const res = await fetch('http://localhost:8080/health');
-                if (res.ok) document.getElementById('status').classList.add('online');
-            } catch (e) { console.log("Server Offline"); }
+// Live version (Update this once you get your backend URL):
+const API_URL = 'https://kalkutor.onrender.com/calculate';
+
+async function checkServer() {
+    try {
+        // We use the health endpoint we talked about earlier
+        const res = await fetch('https://kalkutor.onrender.com/health');
+        if (res.ok) {
+            document.getElementById('status').classList.add('online');
+            console.log("Backend Connected!");
         }
-        checkServer();
+    } catch (e) { 
+        console.log("Backend currently offline or waking up..."); 
+    }
+}
+checkServer();
 
         function updateUI(val) {
             const resView = document.getElementById('result-view');
